--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.2",
     "element-plus": "^2.7.6",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
@@ -28,6 +29,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.2.7",
     "prettier": "^3.2.5",
+    "sass": "^1.77.6",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
     "vite": "^5.3.1"
